@@ -14,12 +14,14 @@ DIST gitlab-ce-8.9.2.tar.gz 21152737 SHA256 f1da983b827297ed45ee859293e9abd1b2da
 DIST gitlab-ce-8.9.3.tar.gz 21156182 SHA256 39578df8b98113bbe79f49d1435d9c399729e9b0d42062a60c8d8c11d1fe056b SHA512 e03b448da007145a8869813e39ceb96f3209b5ab79cc1eee06bdfdb8c85392fdb7a7d5bf3c957fb9d55be93ee6f35945e88747ca1770d566dd4a55cdb0170149 WHIRLPOOL c390be29b4da63f222d22e667baa9876cdbba3d0d1d9d3aa22783355dd1989b2f2bb3692e6c17094444518e36bb0e87b972484c7afc3af132ddc3c536aebcaf9
 DIST gitlab-ce-8.9.4.tar.gz 21156625 SHA256 bd2e2342e68b887f35b322f3e15894aa654c0701476ecfd7c4072f70c1752ad9 SHA512 7b60c99746a3f36298a30c396769189c10d129c827ef0b1f52b38b2fc72a3e425ca4b46fdd47cfec7d0680e84ecc37ab478dfaf9fbff45bb3773abab5681c088 WHIRLPOOL 70a698d85526537ec1f965472ebfeab76b6cc1ce8b638fbfa5c433b9ee9411f48284969c1dcac8297e5415e229ec172e38605338d1108aebde5e6645c1350aa1
 DIST gitlab-ce-8.9.5.tar.gz 21555267 SHA256 6f1685d5b2cf36a580467017ba5a4ce59dc13f90ce160e031d883b424e2557d0 SHA512 7d8a6bb7fee72b4b6b877b5484aeacfb1ccbc387b5635c4bd56cc7296b7b107532aac43f25911580906b186504452c9a8a43d8b64e2c5a5b4b8027ef10bc8e52 WHIRLPOOL aaac0b42fe2b97107b868924e6710829376f42df6ed11af7456362463f19e5d4cd6cc9d4616dd1d7e865caa6f420e028fca2abf07746b5fb0ef3cb2c0427aec3
+DIST gitlab-ce-8.9.6.tar.gz 21555571 SHA256 1b357ed1157a2a20b647004f588b67d72416df805a385fa7b605905bafb26f55 SHA512 d4693cdc80fff44e2f2d2e640163337b153ee08fbd12cefd055c8a595e1487010f7c0db39a11056577d331d3a76cc7da9936139199aad324d9c324395f684f9a WHIRLPOOL 00474d385cd9b574bbef0847f80613253f4543c54b356ab654b0ca3e7233e056efbe995a9de3e418c68d482d4a2b9b0cf676941c7013755bd795bfe83c9766aa
 EBUILD gitlab-ce-8.8.5.ebuild 12342 SHA256 0b528722bb3bc7d232dc6a272973bf8da77992fefa308dabf4b7a9fba8548c18 SHA512 430ee8b469bf43bd8889e9375c49ca83a35d2956c6964e0f1dd07921fbb124a8d7decf60950fbbbc836025d74e73da1e7c89119da2348090d163eb6062739fb4 WHIRLPOOL 3730bf6b32dbc0c3605b15a953114aca56faf859f83672f05ad0b92251697a9cc0778b13d3ba3fd25ddb0858e8ce43b400573f68a605e063ad9bed8597c29fc5
 EBUILD gitlab-ce-8.9.1.ebuild 12334 SHA256 63aeb978a978893a3f35e1ed36c7f57a1e1f37c6bca69114ee0a90f654b120af SHA512 29dd88440925723f9b11fc85de810835374739cc7fcde320e51b8bb5561d8850889a16b4750076fa0b786eb4d10ccbcd09db9d518976a09c13bdb600f85a9584 WHIRLPOOL e16c925f82e7a4175b685d3e6093e410cd6c552d9aaec0807f66183b468f6b53a91e3c9084d63f122ea4c9c6de6278aad4e212fd29ea250e23a7bf7bd47f26e2
 EBUILD gitlab-ce-8.9.2.ebuild 12341 SHA256 a46bb7c78639ee411a8c0994847f4f90a89133f2d85e7eb71f76f9f6756e5c25 SHA512 19712bb3ece7873e9dc2a5d471512a553108b95338bd370dab8dfac6695da34ee713d4d106c62de1472eab7e3e953471ad6274f7d646900e7ef2c7521460211b WHIRLPOOL 1cdff895e32079e2bd85863d46a3c6c0f39590e454f7c77d058f7403341ab39adf477005a9c6c417ec7ca527bffedf0ec1ec3b3f64cb242c3b2d3404c41b6e8f
 EBUILD gitlab-ce-8.9.3.ebuild 12341 SHA256 a46bb7c78639ee411a8c0994847f4f90a89133f2d85e7eb71f76f9f6756e5c25 SHA512 19712bb3ece7873e9dc2a5d471512a553108b95338bd370dab8dfac6695da34ee713d4d106c62de1472eab7e3e953471ad6274f7d646900e7ef2c7521460211b WHIRLPOOL 1cdff895e32079e2bd85863d46a3c6c0f39590e454f7c77d058f7403341ab39adf477005a9c6c417ec7ca527bffedf0ec1ec3b3f64cb242c3b2d3404c41b6e8f
 EBUILD gitlab-ce-8.9.4.ebuild 12341 SHA256 a46bb7c78639ee411a8c0994847f4f90a89133f2d85e7eb71f76f9f6756e5c25 SHA512 19712bb3ece7873e9dc2a5d471512a553108b95338bd370dab8dfac6695da34ee713d4d106c62de1472eab7e3e953471ad6274f7d646900e7ef2c7521460211b WHIRLPOOL 1cdff895e32079e2bd85863d46a3c6c0f39590e454f7c77d058f7403341ab39adf477005a9c6c417ec7ca527bffedf0ec1ec3b3f64cb242c3b2d3404c41b6e8f
 EBUILD gitlab-ce-8.9.5.ebuild 12341 SHA256 a46bb7c78639ee411a8c0994847f4f90a89133f2d85e7eb71f76f9f6756e5c25 SHA512 19712bb3ece7873e9dc2a5d471512a553108b95338bd370dab8dfac6695da34ee713d4d106c62de1472eab7e3e953471ad6274f7d646900e7ef2c7521460211b WHIRLPOOL 1cdff895e32079e2bd85863d46a3c6c0f39590e454f7c77d058f7403341ab39adf477005a9c6c417ec7ca527bffedf0ec1ec3b3f64cb242c3b2d3404c41b6e8f
+EBUILD gitlab-ce-8.9.6.ebuild 12341 SHA256 a46bb7c78639ee411a8c0994847f4f90a89133f2d85e7eb71f76f9f6756e5c25 SHA512 19712bb3ece7873e9dc2a5d471512a553108b95338bd370dab8dfac6695da34ee713d4d106c62de1472eab7e3e953471ad6274f7d646900e7ef2c7521460211b WHIRLPOOL 1cdff895e32079e2bd85863d46a3c6c0f39590e454f7c77d058f7403341ab39adf477005a9c6c417ec7ca527bffedf0ec1ec3b3f64cb242c3b2d3404c41b6e8f
 EBUILD gitlab-ce-9999.ebuild 12344 SHA256 51f6c269afc9899e71c66a44430e644464a72a5b20f828c7f4eef135391175fb SHA512 193cfc353428cb7e4dd37415031d7382ca7efd66391d8839733550864adcc3fdea3e21a882223770ebb6b939a0e08e5e5b2bfb4bb6fff7838dbebd331368e2a5 WHIRLPOOL 74fddca03105d85ad59f61849cb16bc96fbf68ddd6404db15152ad9aadcdafc6aa4d0ff8468a8326b23af16d9e199177d6d83f3296262f93c16115d3fe99e707
-MISC ChangeLog 2325 SHA256 76dc4d67187abfa8f76cac4868cef97288a4675837d2dc91b92b6ac15bd685da SHA512 fc2fda89d8e4759081c7ec78ec109dc6be7a18dabc6457d868656477fb50b531ad3e71bf5a5c2231b6a17e9afc951b393e9fb6ef8e6f42ccd0c277a68dfb799d WHIRLPOOL 185f0cc1d8368972573cc592287bbc944bace66d53019f4341b52538cb15dc3362c18b10b296faf2f396238a25a0ae65e67893c34af6d8e3ab461fc326178776
+MISC ChangeLog 2488 SHA256 db9419709849024fac4a3853254d27988c47f08c8ac4a62d2a47dcfae4944c8c SHA512 a2293ef588ce44a30669b6383a37fcaed58e0d127e29cbf1f4f999b0ed5016b5c4b2e40f7228015b67458d15de811f4e8aea2783088a146c83da4b6f382ff840 WHIRLPOOL 548f6dc6026ad420136d2ab7d11ba110035126c06834b1526386cbee5243fab2d2bd9b5d98207855b45590c66d0b2c1b5ab993f6a1231822b385cc6b8dcccc64
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
